feat: add aiohttp to dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,7 @@ package_dir =
 packages = find:
 python_requires = >=3.7
 install_requires =
+    aiohttp ~= 3.8
     adlfs ~= 2021.10.0
     azure-storage-blob ~= 12.9
     blosc == 1.10.2
